# EnforceCore

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DISCLAIMER.md  Dockerfile  LICENSE  NOTICE  README.md  RELEASE_PROCESS.md  RELEASING.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
benchmarks/: __init__.py  __main__.py  run.py
docs/: api-design.md  architecture.md  auditstore.md  benchmarks.md  contributing.md  defense-in-depth.md  dev-guide.md  evaluation.md  faq.md  grafana-dashboard.json  index.md  issues-v1.1.1.md  migration.md  quickstart.md  related-work.md  roadmap.md  tech-stack.md  threat-model.md  troubleshooting.md  versioning-and-roadmap.md  versioning.md  vision.md
docs/api/: auditor.md  backends.md  config.md  enforcer.md  evaluation.md  guard.md  hardening.md  hooks.md  immutable.md  index.md  instrumentor.md  integrations.md  metrics.md  network.md  patterns.md  policy.md  ratelimit.md  redactor.md  rotation.md  rules.md  secrets.md  types.md  unicode.md  webhooks.md  witness.md
docs/compliance/: eu-ai-act.md  gdpr.md
docs/formal/: invariants.md  policy-algebra.md
docs/security/: attack-surface.md  tool-selection.md
enforcecore/: __init__.py  __main__.py  utils.py
enforcecore/auditor/: __init__.py  backends.py  engine.py  immutable.py  rotation.py  witness.py
enforcecore/auditstore/: __init__.py  adapters.py  core.py
enforcecore/cli/: __init__.py  main.py
enforcecore/compliance/: __init__.py  reporter.py  types.py
enforcecore/core/: __init__.py  config.py  enforcer.py  hardening.py  multitenant.py  policy.py  policy_server.py  rules.py  sensitivity.py  types.py
enforcecore/eval/: __init__.py  benchmarks.py  framework_comparison.py  report.py  runner.py  scenarios.py  types.py
enforcecore/guard/: __init__.py  engine.py  network.py  ratelimit.py
enforcecore/integrations/: __init__.py  _base.py  autogen.py  crewai.py  langchain.py  langgraph.py
enforcecore/plugins/: __init__.py  base.py  hooks.py  manager.py  webhooks.py
enforcecore/redactor/: __init__.py  engine.py  ner.py  patterns.py  secrets.py  unicode.py
enforcecore/sandbox/: __init__.py  config.py  errors.py  runner.py
enforcecore/streaming/: __init__.py  adapters.py  core.py  redactor.py
enforcecore/telemetry/: __init__.py  instrumentor.py  logexport.py  metrics.py  prometheus.py
examples/: README.md  audit_trail.py  evaluation_suite.py  framework_integrations.py  pii_redaction.py  quickstart.py  quickstart_autogen.py  quickstart_crewai.py  quickstart_langchain.py  quickstart_langgraph.py  resource_guard.py
examples/policies/: default.yaml  permissive.yaml  pii_demo.yaml  strict.yaml
internal/roadmap/: master-roadmap.md
results/: eval_report.md  framework_comparison.md
scripts/: full_audit.py  post_release_pip_test.py  post_release_verify.py  pre_release_gate.py  release.py  run_eval.py
tests/: __init__.py  conftest.py  test_main.py
tests/api/: __init__.py  test_public_api.py
tests/auditor/: conftest.py  test_backends.py  test_enforcer_audit.py  test_engine.py  test_immutable.py  test_rotation.py  test_witness.py
tests/auditstore/: __init__.py  test_adapter_gaps.py  test_audit_coverage.py  test_auditor_integration.py  test_backend_gaps.py  test_core.py  test_merkle_bridge.py  test_merkle_tree.py  test_postgresql.py
tests/cli/: __init__.py  test_cli.py  test_cli_gaps.py
tests/compliance/: test_compliance_coverage.py  test_compliance_reporter.py
(+115 files in other folders)
