[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enforcecore"
version = "1.0.0b3"
description = "The runtime enforcement layer for agentic AI systems."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "AKIOUD AI", email = "contact@akioud.ai" },
]
keywords = [
    "ai",
    "agents",
    "enforcement",
    "security",
    "runtime",
    "policy",
    "audit",
    "pii",
    "compliance",
    "eu-ai-act",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
redactor = [
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
]
linux = [
    "python-seccomp>=0.1; sys_platform == 'linux'",
]
cli = [
    "typer>=0.12",
    "rich>=13.0",
]
telemetry = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.0",
    "hypothesis>=6.100",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-PyYAML>=6.0",
    "rich>=13.0",
    "typer>=0.12",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]
all = [
    "enforcecore[redactor,cli,telemetry]",
]

[project.urls]
Homepage = "https://akios.ai/enforcecore"
Repository = "https://github.com/akios-ai/EnforceCore"
Documentation = "https://akios.ai/enforcecore"
Issues = "https://github.com/akios-ai/EnforceCore/issues"
Changelog = "https://github.com/akios-ai/EnforceCore/blob/main/CHANGELOG.md"

[project.scripts]
enforcecore = "enforcecore.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["enforcecore"]

[tool.hatch.build.targets.sdist]
exclude = [
    "internal/",
    ".github/",
    "examples/",
]

# --- Ruff ---
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["enforcecore"]

# --- Mypy ---
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "presidio_analyzer.*",
    "presidio_anonymizer.*",
    "seccomp.*",
    "langchain_core.*",
    "crewai.*",
    "autogen_core.*",
    "opentelemetry.*",
]
ignore_missing_imports = true

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "linux_only: marks tests that require Linux",
]
